[package]
name = "traefik"
version = "0.1.0"
edition = "2021"
description = "Traefik reverse proxy / ingress — orca service-backend"

[package.metadata.orca]
category = "networking"

[lib]
name = "traefik"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "traefik"
path = "src/main.rs"

# traefik is a BACKEND-ONLY orca plugin: zero #[orca_tool]s. It registers a
# ServiceBackend across the cdylib FFI seam and reaches the whole orca system
# through plugin-toolkit alone.
[dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

[dev-dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints.clippy]
let_underscore_must_use = "deny"
